--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <p><strong>Email:</strong> <a href="mailto:baum22team@freakmail.de"><code class="language-plaintext highlighter-rouge">baum22team@freakmail.de</code></a></p>
 
+<p><strong>Über uns:</strong> Wir sind 2 Hobby-Programmierer aus Deutschland und wir haben uns überlegt eine GitHub-Organisation zu gründen um gemeinsam an einer Website und anderen Coding-Projekten zu arbeiten.</p>
+
 
       
     </div>
